Don't complete task until compute instance gets an IP
vSphere instance adapter waits up to 2 minutes waiting for instance to boot and
be assigned an IP.

Change-Id: Ib3b317060f94aac5c075267a5c34450d35df843e