@@ -100,4 +100,16 @@
       <optional>true</optional>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-XX:+UseConcMarkSweepGC</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
